[gd_scene load_steps=17 format=3 uid="uid://p3sohjs1pt37"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_tfeld"]
[ext_resource type="PackedScene" uid="uid://03t7su6t2rq2" path="res://panels/Universes/Universes.tscn" id="2_5emfv"]
[ext_resource type="PackedScene" uid="uid://cim02rtl7kfpc" path="res://panels/IOControls/IOControls.tscn" id="3_4pxh0"]
[ext_resource type="PackedScene" uid="uid://d12eb0smjpwuk" path="res://panels/Fixtures/Fixtures.tscn" id="4_t24sk"]
[ext_resource type="PackedScene" uid="uid://c3lrdtiw05qft" path="res://panels/AddFixture/AddFixture.tscn" id="5_34ei5"]
[ext_resource type="PackedScene" uid="uid://cedqo06n6en8u" path="res://panels/Functions/Functions.tscn" id="6_egc52"]
[ext_resource type="PackedScene" uid="uid://baortk0rwrhup" path="res://panels/Playbacks/Playbacks.tscn" id="7_kcrfg"]
[ext_resource type="PackedScene" uid="uid://dhrijn1m88172" path="res://panels/VirtualFixtures/VirtualFixtures.tscn" id="8_o4oh4"]
[ext_resource type="PackedScene" uid="uid://bwxr0mrsrt0iu" path="res://panels/Programmer/Programmer.tscn" id="9_l6sny"]
[ext_resource type="PackedScene" uid="uid://bsxgp5g0jmyke" path="res://panels/Desk/Desk.tscn" id="10_7dsq0"]
[ext_resource type="PackedScene" uid="uid://ug7d71ixmir" path="res://components/PanelContainer/PanelContainer.tscn" id="11_g8sfv"]
[ext_resource type="Script" path="res://scripts/Menu_buttons.gd" id="12_8wwlp"]
[ext_resource type="PackedScene" uid="uid://cbsp8xx2h45do" path="res://components/ObjectPicker/ObjectPicker.tscn" id="13_npqvx"]
[ext_resource type="Texture2D" uid="uid://bhl73t2e0jcwn" path="res://assets/icons/close.svg" id="14_1on47"]
[ext_resource type="PackedScene" uid="uid://dm6rs78fm1lh4" path="res://panels/SaveLoad/SaveLoad.tscn" id="15_177vj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_plmay"]
bg_color = Color(0.32491, 0.32491, 0.32491, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tfeld")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.0666667, 0.0666667, 1)

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 3
drag_to_rearrange_enabled = true
use_hidden_tabs_for_min_size = true

[node name="Universes" type="HSplitContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Universes" parent="TabContainer/Universes" instance=ExtResource("2_5emfv")]
layout_mode = 2

[node name="IO Controls" parent="TabContainer/Universes" instance=ExtResource("3_4pxh0")]
layout_mode = 2

[node name="Fixtures" type="HSplitContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Fixtures" parent="TabContainer/Fixtures" instance=ExtResource("4_t24sk")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add Fixture" parent="TabContainer/Fixtures" instance=ExtResource("5_34ei5")]
layout_mode = 2

[node name="Functions" parent="TabContainer" instance=ExtResource("6_egc52")]
visible = false
layout_mode = 2

[node name="Virtual Fixtures" type="HSplitContainer" parent="TabContainer"]
layout_mode = 2
split_offset = -880

[node name="Playbacks" parent="TabContainer/Virtual Fixtures" instance=ExtResource("7_kcrfg")]
layout_mode = 2
show_all = true

[node name="VSplitContainer" type="VSplitContainer" parent="TabContainer/Virtual Fixtures"]
layout_mode = 2
size_flags_horizontal = 3
split_offset = 160

[node name="Virtual Fixtures" parent="TabContainer/Virtual Fixtures/VSplitContainer" instance=ExtResource("8_o4oh4")]
layout_mode = 2

[node name="HBoxContainer2" parent="TabContainer/Virtual Fixtures/VSplitContainer" instance=ExtResource("9_l6sny")]
layout_mode = 2
size_flags_vertical = 3

[node name="Desk" parent="TabContainer" instance=ExtResource("10_7dsq0")]
visible = false
layout_mode = 2

[node name="PanelContainer" parent="TabContainer" instance=ExtResource("11_g8sfv")]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.832
anchor_right = 1.0
offset_left = -76.4401
offset_top = 2.0
offset_right = -2.0
offset_bottom = 43.0
grow_horizontal = 2
script = ExtResource("12_8wwlp")

[node name="EditMode" type="CheckButton" parent="HBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Edit Mode"

[node name="File" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "File"

[node name="ObjectPickerWindow" type="Window" parent="."]
initial_position = 4
size = Vector2i(650, 550)
visible = false

[node name="ObjectPicker" parent="ObjectPickerWindow" instance=ExtResource("13_npqvx")]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveLoadPopup" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -506.0
offset_top = -391.0
offset_right = 506.0
offset_bottom = 391.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_plmay")

[node name="VBoxContainer2" type="VBoxContainer" parent="SaveLoadPopup"]
layout_mode = 2

[node name="SaveLoadClose" type="Button" parent="SaveLoadPopup/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("14_1on47")

[node name="SaveLoad" parent="SaveLoadPopup/VBoxContainer2" instance=ExtResource("15_177vj")]
layout_mode = 2
size_flags_vertical = 3

[connection signal="tab_button_pressed" from="TabContainer" to="TabContainer" method="_on_tab_button_pressed"]
[connection signal="tab_clicked" from="TabContainer" to="TabContainer" method="_on_tab_clicked"]
[connection signal="toggled" from="HBoxContainer/EditMode" to="HBoxContainer" method="_on_edit_mode_toggled"]
[connection signal="pressed" from="HBoxContainer/File" to="HBoxContainer" method="_on_file_pressed"]
[connection signal="close_requested" from="ObjectPickerWindow" to="ObjectPickerWindow/ObjectPicker" method="_on_close_requested"]
[connection signal="pressed" from="SaveLoadPopup/VBoxContainer2/SaveLoadClose" to="HBoxContainer" method="_on_save_load_close_pressed"]
